[tool.poetry]
name = "Whitelist Censor Service Client"
version = "0.1.0"
description = ""
authors = []
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10 <3.12"
python-dotenv = "^0.21.0"
fastapi = "^0.109.1"
uvicorn = { extras = ["standard"], version = "^0.18.3" }
aiohttp = "^3.8.6"
websockets = "^10.3"
paramiko = "^3.4.0"
rocketry = "^2.4.1"
twitchio = "^2.5.0"

[tool.poetry.dev-dependencies]
black = "^24.8.0"
bandit = "^1.7.9"
flake8 = "^7.1.1"
isort = "^5.13.2"
mypy = "1.11.1"
ossaudit = "0.5.0"
types-paramiko = "^3.4.0.20240423"
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
src_paths = ["src"]
profile = "black"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
show_error_codes = true
